--- a/naia-socket-server/Cargo.toml
+++ b/naia-socket-server/Cargo.toml
@@ -10,7 +10,7 @@ publish = false
 [features]
 
 [dependencies]
-naia-server-socket = { version = "=0.9.0", features = [ "use-webrtc" ] }
-naia-socket-shared = { version = "=0.9.0" }
+naia-server-socket = { path = "../../naia/socket/server", features = [ "use-webrtc" ] } # version = "0.10",
+naia-socket-shared = { path = "../../naia/socket/shared" } # version = "0.10"
 log = "0.4"
 simple_logger = { version = "=2.0.0" }
