--- a/webrtc-rs-client/Cargo.toml
+++ b/webrtc-rs-client/Cargo.toml
@@ -10,7 +10,7 @@ publish = false
 [features]
 
 [dependencies]
-webrtc = "=0.4.0"
+webrtc = { version = "0.4", path = "../../Forks/webrtc" }
 tokio = { version = "=1.15.0", features = ["full"] }
 env_logger = "=0.9.0"
 clap = "=3.0.8"
@@ -20,3 +20,4 @@ log = "=0.4.14"
 bytes = "=1.1.0"
 reqwest = { version = "=0.11", features = ["rustls-tls"] }
 tinyjson = { version = "=2.3.0" }
+regex = { version = "1.5" }
