--- a/webrtc-rs-client/Cargo.toml
+++ b/webrtc-rs-client/Cargo.toml
@@ -10,14 +10,11 @@ publish = false
 [features]
 
 [dependencies]
-webrtc = { version = "0.4", path = "../../Forks/webrtc" }
-tokio = { version = "=1.15.0", features = ["full"] }
-env_logger = "=0.9.0"
-clap = "=3.0.8"
-tokio-util = "=0.6.9"
-anyhow = "=1.0.52"
-log = "=0.4.14"
-bytes = "=1.1.0"
-reqwest = { version = "=0.11", features = ["rustls-tls"] }
-tinyjson = { version = "=2.3.0" }
-regex = { version = "1.5" }
+webrtc-unreliable-client-full = { path = "../../webrtc-unreliable-client/full" }
+tokio = { version = "1.15", features = ["full"] }
+anyhow = "1.0"
+bytes = "1.1"
+reqwest = { version = "0.11", features = ["rustls-tls"] }
+tinyjson = { version = "2.3" }
+env_logger = { version = "0.9" }
+log = { version = "0.4" }
